# product_development

./: .gitignore  .pylintrc  Makefile  README.md  dvc.yaml  environment.yml  params.yaml  pylint_report.txt  pyproject.toml
docs/: API_DOCUMENTATION.md  DVC_PIPELINE.md
models/: feature_engineering_pipeline.pkl  sales_pipeline.pkl
notebooks/: 01_Data_Exploration.ipynb  02_feature_exploration.ipynb  03_feature_creation.ipynb  04_model_tuning_training.ipynb  05_inference_calculation.ipynb  operators.py
product_development/: __init__.py  api.py  config.py  dataset.py  features.py  plots.py  run_api.py  run_pipeline.py  transformers.py
product_development/modeling/: __init__.py  predict.py  train.py
reports/: metrics.json
scripts/: dvc_inference.py  dvc_train.py  run_api_simple.py
tests/: test_api_examples.py  test_data.py
