[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "product_development"
version = "0.0.1"
description = "Proyecto del Curso - Pipeline de MLOps para Predicción de Ventas"
authors = [
  { name = "galileo_team" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "feature-engine>=1.6.0",
    "xgboost>=2.0.0",
    "joblib>=1.3.0",
    "loguru>=0.7.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "mlflow>=2.9.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
run-pipeline = "product_development.run_pipeline:app"

[tool.ruff]
line-length = 99
src = ["product_development"]
include = ["pyproject.toml", "product_development/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["product_development"]
force-sort-within-sections = true

[tool.pylint.main]
py-version = "3.11"
jobs = 0
load-plugins = []

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "too-many-arguments",
    "too-many-locals",
    "import-error",
    "no-name-in-module",
]

[tool.pylint.format]
max-line-length = 99

[tool.pylint.design]
max-args = 10
max-locals = 20

